| Summary: | ASTERISK-30367: pbx: Fix outdated channel snapshots with pbx_exec | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-12-21 08:53:22.000-0600 | Date Closed: | 2023-01-03 07:20:48.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/PBX |
| Versions: | 20.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When pbx_exec is called, a channel snapshot is made before the application is executed but not afterwards. This means if pbx_exec is not called again immediately after, the channel snapshot is stale and core show channels will show outdated information (e.g. wrong application).
This patch fixes that. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-12-21 08:53:33.181-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2023-01-03 07:20:50.016-0600 Change 19743 merged by Friendly Automation: pbx_app: Update outdated pbx_exec channel snapshots. [https://gerrit.asterisk.org/c/asterisk/+/19743|https://gerrit.asterisk.org/c/asterisk/+/19743] By: Friendly Automation (friendly-automation) 2023-01-03 07:23:08.002-0600 Change 19733 merged by Friendly Automation: pbx_app: Update outdated pbx_exec channel snapshots. [https://gerrit.asterisk.org/c/asterisk/+/19733|https://gerrit.asterisk.org/c/asterisk/+/19733] By: Friendly Automation (friendly-automation) 2023-01-03 07:55:47.056-0600 Change 19732 merged by George Joseph: pbx_app: Update outdated pbx_exec channel snapshots. [https://gerrit.asterisk.org/c/asterisk/+/19732|https://gerrit.asterisk.org/c/asterisk/+/19732] | ||