app_george: remove comment addressed by bug fix

The behavior described by this comment is addressed by the bug fix for ASTERISK-30367.
Channel snapshots were not getting made after pbx_exec executed the application, which
meant that using ast_pbx_exec_application would let old info linger in the channel snapshot.